--- a/sourcecode/samples_ee8/pom.xml
+++ b/sourcecode/samples_ee8/pom.xml
@@ -60,11 +60,6 @@
 			<artifactId>primefaces</artifactId>
 			<version>6.1</version>
 		</dependency>
-		<dependency>
-			<groupId>rome</groupId>
-			<artifactId>rome</artifactId>
-			<version>1.0</version>
-		</dependency>
 
 		<!-- Hibernate not needed in WildFly as it is included, but prob. needed on other App Servers-->
 		<dependency>
@@ -86,12 +81,11 @@
 		  <scope>provided</scope>
 		</dependency>
 
-		<!-- testing -->
+		<!-- Test early and often -->
 		<dependency>
-			<groupId>org.junit.platform</groupId>
-			<artifactId>junit-platform-console-standalone</artifactId>
-			<!-- This is what we think of as JUnit 5; new numbering, sigh. -->
-			<version>1.1.0-M1</version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -99,12 +93,12 @@
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>9.4.1212.jre7</version>
+			<version>42.1.4.jre7</version>
 		</dependency>
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.4.185</version>
+			<version>1.4.196</version>
 			<scope>test</scope>
 		</dependency>
 		
@@ -112,6 +106,11 @@
  
 	<build>
 		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.20.1</version>
+			</plugin>
 
 			<!-- Java EE AppServer: WildFly -->
 			<plugin>
