--- a/sourcecode/samples_ee8/pom.xml
+++ b/sourcecode/samples_ee8/pom.xml
@@ -40,19 +40,18 @@
 			<scope>provided</scope>
 		</dependency>
 		
-		<!-- Some parts of that are needed at test time -->
+		<!-- JSON-B -->
 		<dependency>
 			<groupId>org.eclipse</groupId>
 			<artifactId>yasson</artifactId>
 			<version>1.0.1</version>
 		</dependency>
-		<!-- Yasson has incestuous dependency on Glassfish -->
+		<!-- Yasson has dependency on Glassfish org.json -->
 		<dependency>
 			<groupId>org.glassfish</groupId>
 			<artifactId>javax.json</artifactId>
-			<version>1.1.2</version>
+			<version>1.1</version>
 		</dependency>
-		
 
 		<!-- PrimeFaces JSF Add-on -->
 		<dependency>
@@ -83,9 +82,9 @@
 
 		<!-- Test early and often -->
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.12</version>
+			<groupId>org.junit.jupiter</groupId>
+			<artifactId>junit-jupiter-api</artifactId>
+			<version>5.1.0-M1</version>
 			<scope>test</scope>
 		</dependency>
 
@@ -106,10 +105,25 @@
  
 	<build>
 		<plugins>
+			<!-- Try to configure Maven for JUnit 5. Here be dragons!!! 
+			 * As of early 2018, lots of cruft needed; see:
+			 http://junit.org/junit5/docs/current/user-guide/#running-tests-build-maven
+			 -->
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.20.1</version>
+				<version>2.19</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.junit.platform</groupId>
+						<artifactId>junit-platform-surefire-provider</artifactId>
+						<version>1.0.2</version>
+					</dependency>
+					<dependency>
+						<groupId>org.junit.jupiter</groupId>
+						<artifactId>junit-jupiter-engine</artifactId>
+						<version>5.0.2</version>
+					</dependency>
+				</dependencies>
 			</plugin>
 
 			<!-- Java EE AppServer: WildFly -->
