--- a/sourcecode/samples_ee8/pom.xml
+++ b/sourcecode/samples_ee8/pom.xml
@@ -38,15 +38,19 @@
 			<artifactId>javaee-api</artifactId>	
 			<version>8.0</version>  
 			<scope>provided</scope>
-		</dependency>
-		
+			</dependency>
+	
 		<!-- JSON-B -->
+		<dependency>
+			<groupId>javax.json.bind</groupId>
+			<artifactId>javax.json.bind-api</artifactId>
+			<version>1.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.eclipse</groupId>
 			<artifactId>yasson</artifactId>
-			<version>1.0.1</version>
+			<version>1.0</version>
 		</dependency>
-		<!-- Yasson has dependency on Glassfish org.json -->
 		<dependency>
 			<groupId>org.glassfish</groupId>
 			<artifactId>javax.json</artifactId>
