--- a/sourcecode/ex31solution/pom.xml
+++ b/sourcecode/ex31solution/pom.xml
@@ -1,7 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 		http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.ticketmanor</groupId>
@@ -10,7 +9,7 @@
 	<packaging>jar</packaging>
 	<inceptionYear>2015</inceptionYear>
 
-	<name>LT-JaveEE JPA and test</name>
+	<name>LT-JaveEE JPA saving and loading</name>
 	<url>https://learningtree.com/936</url>
 
 	<properties>
