--- a/sourcecode/ex53solution/pom.xml
+++ b/sourcecode/ex53solution/pom.xml
@@ -36,17 +36,9 @@
 			<groupId>org.glassfish</groupId>
 			<artifactId>javax.jms</artifactId>
 			<version>3.1.1</version>
+			<scope>provided</scope>
 		</dependency>
 
-		<!-- App-server-dependent Client Stuff -->
-		<dependency>
-			<groupId>org.wildfly</groupId>
-			<artifactId>wildfly-ejb-client-bom</artifactId>
-			<version>8.2.0.Final</version>
-			<type>pom</type>
-			<scope>test</scope>
-		</dependency>
-		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
