--- a/sourcecode/ex53clientsolution/pom.xml
+++ b/sourcecode/ex53clientsolution/pom.xml
@@ -41,27 +41,47 @@
 		<dependency>
 			<groupId>org.glassfish</groupId>
 			<artifactId>javax.jms</artifactId>
-			<version>3.1.1</version>
+			<version>10.0-b28</version>
 		</dependency>
 
 		<!-- App-server-dependent Client Stuff -->
 		<dependency>
 			<groupId>org.wildfly</groupId>
 			<artifactId>wildfly-ejb-client-bom</artifactId>
-			<version>8.2.0.Final</version>
+			<version>11.0.0.Final</version>
 			<type>pom</type>
 		</dependency>
 
-		<!--
-		 ***  WARNING!!! The version of HornetMQ used here MUST agree with what
-		 *** the WildFly AS is using (which it prints out at start up).
-		 -->
+		<!-- JMS client stuff -->
 		<dependency>
-    		<groupId>org.hornetq</groupId>
-    		<artifactId>hornetq-jms-client</artifactId>
-    		<version>2.4.5.Final</version>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>artemis-jms-client</artifactId>
+			<version>2.4.0</version>
 		</dependency>
-		
+
 	</dependencies>
+
+	<build>
+		<defaultGoal>package</defaultGoal>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.6.0</version>
+				<executions>
+					<execution>
+						<id>my-execution</id>
+						<phase>package</phase>
+						<goals>
+							<goal>java</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<mainClass>buspartner.client.CommentSender</mainClass>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
 
 </project>
