--- a/sourcecode/ex53clientsolution/src/main/resources/jndi.properties
+++ b/sourcecode/ex53clientsolution/src/main/resources/jndi.properties
@@ -1,5 +1,6 @@
 
-java.naming.factory.initial=org.jboss.naming.remote.client.InitialContextFactory
+# java.naming.factory.initial=org.jboss.naming.remote.client.InitialContextFactory
+java.naming.factory.initial=org.wildfly.naming.client.WildFlyInitialContextFactory
 java.naming.provider.url=http-remoting://localhost:8080
 
 java.naming.security.principal=testuser
