--- a/sourcecode/ex53clientsolution/pom.xml
+++ b/sourcecode/ex53clientsolution/pom.xml
@@ -38,25 +38,12 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.glassfish</groupId>
-			<artifactId>javax.jms</artifactId>
-			<version>10.0-b28</version>
-		</dependency>
-
 		<!-- App-server-dependent Client Stuff -->
 		<dependency>
 			<groupId>org.wildfly</groupId>
-			<artifactId>wildfly-ejb-client-bom</artifactId>
-			<version>9.0.0.Final</version>
+			<artifactId>wildfly-jms-client-bom</artifactId>
+			<version>11.0.0.Final</version>
 			<type>pom</type>
-		</dependency>
-
-		<!-- JMS client stuff -->
-		<dependency>
-			<groupId>org.apache.activemq</groupId>
-			<artifactId>artemis-jms-client</artifactId>
-			<version>2.2.0</version>
 		</dependency>
 
 	</dependencies>
