--- a/sourcecode/ex53solution/pom.xml
+++ b/sourcecode/ex53solution/pom.xml
@@ -55,6 +55,15 @@
 				</configuration>
 			</plugin>
 
+			<!-- Configure Maven WAR plugin a bit -->
+			<plugin>
+				<artifactId>maven-war-plugin</artifactId>
+				<version>2.1.1</version>
+				<configuration>
+					<failOnMissingWebXml>false</failOnMissingWebXml>
+				</configuration>
+			</plugin>
+
 			<!-- Java EE AppServer: WildFly -->
 			<plugin>
 				<groupId>org.wildfly.plugins</groupId>
