--- a/sourcecode/ex71solution/pom.xml
+++ b/sourcecode/ex71solution/pom.xml
@@ -34,13 +34,13 @@
 		<dependency>
 		  <groupId>org.hibernate</groupId>
 		  <artifactId>hibernate-core</artifactId>
-		  <version>4.3.7.Final</version>
+		  <version>5.3.0.Beta1</version>
 		  <scope>provided</scope>
 		</dependency>
 		<dependency>
 		  <groupId>org.hibernate</groupId>
 		  <artifactId>hibernate-entitymanager</artifactId>
-		  <version>4.3.7.Final</version>
+		  <version>5.3.0.Beta1</version>
 		  <scope>provided</scope>
 		</dependency>
 
@@ -58,26 +58,17 @@
 			<scope>provided</scope>
 		</dependency>
 
-		<!-- Database Drivers -->
-		<!-- 
-		<dependency>
-			<groupId>mysql</groupId>
-			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.33</version>
-		</dependency>
-			 -->
-	
 		<!-- For the JAX-RS Client impl, used in tests -->
 		<dependency>
 			<groupId>org.jboss.resteasy</groupId>
 			<artifactId>resteasy-client</artifactId>
-			<version>3.0.10.Final</version>
+			<version>4.0.0.Beta1</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
 		    <groupId>org.jboss.resteasy</groupId>
 		    <artifactId>resteasy-jackson-provider</artifactId>
-		    <version>3.0.10.Final</version>
+		    <version>4.0.0.Beta1</version>
 		    <scope>test</scope>
 		</dependency>
 
@@ -85,7 +76,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>(4.8,5.0)</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
