--- a/sourcecode/ex71solution/pom.xml
+++ b/sourcecode/ex71solution/pom.xml
@@ -1,5 +1,7 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+	http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.ticketmanor</groupId>
@@ -12,10 +14,10 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<eclipselink.version>2.6.0-M3</eclipselink.version>
 	</properties>
-	
+
 	<dependencies>
+	
 		<dependency>
 			<groupId>com.ticketmanor</groupId>
 			<artifactId>datamodel</artifactId>
@@ -30,32 +32,25 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- PrimeFaces JSF Add-on -->
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>6.1</version>
+		</dependency>
+
 		<!-- Hibernate not needed in WildFly as it is included, but prob. needed on other App Servers-->
 		<dependency>
-		  <groupId>org.hibernate</groupId>
-		  <artifactId>hibernate-core</artifactId>
-		  <version>5.3.0.Beta1</version>
-		  <scope>provided</scope>
+			<groupId>org.hibernate</groupId>
+			<artifactId>hibernate-core</artifactId>
+			<version>5.2.12.Final</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 		  <groupId>org.hibernate</groupId>
 		  <artifactId>hibernate-entitymanager</artifactId>
-		  <version>5.3.0.Beta1</version>
+		  <version>5.2.12.Final</version>
 		  <scope>provided</scope>
-		</dependency>
-
-		<!-- EclipseLink and its JPA Provider -->
-		<dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>org.eclipse.persistence.core</artifactId>
-			<version>${eclipselink.version}</version>
-			<scope>provided</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.eclipse.persistence</groupId>
-			<artifactId>org.eclipse.persistence.jpa</artifactId>
-			<version>${eclipselink.version}</version>
-			<scope>provided</scope>
 		</dependency>
 
 		<!-- For the JAX-RS Client impl, used in tests -->
@@ -66,10 +61,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-		    <groupId>org.jboss.resteasy</groupId>
-		    <artifactId>resteasy-jackson-provider</artifactId>
-		    <version>4.0.0.Beta1</version>
-		    <scope>test</scope>
+			<groupId>org.jboss.resteasy</groupId>
+			<artifactId>resteasy-jackson-provider</artifactId>
+			<version>4.0.0.Beta1</version>
+			<scope>test</scope>
 		</dependency>
 
 		<!-- And speaking of tests... -->
@@ -79,33 +74,28 @@
 			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
+
+		<!-- Database driver -->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.34</version>
+			<scope>provided</scope>
+		</dependency>
+		
 	</dependencies>
+
 	<build>
 		<plugins>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.1</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-
-			<!-- Configure failsafe plugin to run integration tests -->
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.12.4</version>
-				<executions>
-					<execution>
-						<id>integration-test</id>
-						<goals>
-							<goal>integration-test</goal>
-							<goal>verify</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+		   <plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.2</version>
+			<configuration>
+				<source>1.8</source>
+				<target>1.8</target>
+			</configuration>
+		   </plugin>
 
 			<!-- Java EE AppServer: WildFly -->
 			<plugin>
@@ -131,7 +121,7 @@
 					<tomeeClassifier>plus</tomeeClassifier>
 				</configuration>
 			</plugin>
-			
+
 		</plugins>
 	</build>
 </project>
