--- a/sourcecode/ex71solution/src/main/webapp/WEB-INF/web.xml
+++ b/sourcecode/ex71solution/src/main/webapp/WEB-INF/web.xml
@@ -3,27 +3,8 @@
        xmlns="http://java.sun.com/xml/ns/javaee"
        xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
        xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
-<!-- 
-	<description>TicketManor</description>
-	<display-name>TicketManor</display-name>
 
-	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
-		<welcome-file>index.web</welcome-file>
-	</welcome-file-list>
+	<description>TicketManor REST-only app</description>
+	<display-name>TicketManor REST-only app</display-name>
 
-	<servlet>
-		<servlet-name>Faces Servlet</servlet-name>
-		<servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
-		<load-on-startup>1</load-on-startup>
-	</servlet>
-	<servlet-mapping>
-		<servlet-name>Faces Servlet</servlet-name>
-		<url-pattern>*.web</url-pattern>
-	</servlet-mapping>
-	
-	<listener>
-	    <listener-class>com.ticketmanor.jpa.FakeDataLoaderListener</listener-class>
-	</listener>
-	 -->
 </web-app>
