--- a/sourcecode/ex42solution/pom.xml
+++ b/sourcecode/ex42solution/pom.xml
@@ -29,7 +29,7 @@
 		<dependency>
 			<groupId>javax</groupId>
 			<artifactId>javaee-api</artifactId>
-			<version>7.0</version>
+			<version>8.0.1-b5</version>
 		</dependency>
 
 		<!-- Here we put two different JPA providers on the ClassPath.
@@ -67,31 +67,31 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
-			<version>4.3.2.Final</version>
+			<version>6.1.0.Alpha4</version>
 		</dependency>
 
 		<!-- Database Drivers (just leave them all listed)-->
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
-			<version>1.4.192</version>
+			<version>1.4.199</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>2.3.4</version>
+			<version>2.4.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
-			<version>9.4.1210.jre7</version>
+			<version>42.2.5.jre7</version>
 		</dependency>
 		
 		<!-- Testing... -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>(4.8,5.0)</version>
+			<version>4.13-beta-2</version>
 			<scope>test</scope>
 		</dependency>
 
