--- a/sourcecode/ex53serversolution/.project
+++ b/sourcecode/ex53serversolution/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ex53solution</name>
+	<name>ex53serversolution</name>
 	<comment></comment>
 	<projects>
 	</projects>
