--- a/sourcecode/exUSsolution/pom.xml
+++ b/sourcecode/exUSsolution/pom.xml
@@ -46,6 +46,11 @@
 			<groupId>javax.enterprise</groupId>
 			<artifactId>cdi-api</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<build>
