--- a/sourcecode/ex52solution/pom.xml
+++ b/sourcecode/ex52solution/pom.xml
@@ -45,7 +45,7 @@
 		<dependency>
 			<groupId>org.wildfly</groupId>
 			<artifactId>wildfly-ejb-client-bom</artifactId>
-			<version>8.2.0.Final</version>
+			<version>16.0.0.Final</version>
 			<type>pom</type>
 			<scope>test</scope>
 		</dependency>
@@ -53,7 +53,7 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>(4.8,5.0)</version>
+			<version>4.13-beta-2</version>
 			<scope>test</scope>
 		</dependency>
 
