--- a/sourcecode/ex41solution/pom.xml
+++ b/sourcecode/ex41solution/pom.xml
@@ -13,6 +13,13 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<javase.version>1.8</javase.version>
+		<maven.compiler.source>${javase.version}</maven.compiler.source>
+		<maven.compiler.target>${javase.version}</maven.compiler.target>
+		<maven.compiler.testSource>${javase.version}</maven.compiler.testSource>
+		<maven.compiler.testTarget>${javase.version}</maven.compiler.testTarget>
+		<maven.javadoc.failOnError>false</maven.javadoc.failOnError>
 		<eclipselink.version>2.6.0-M3</eclipselink.version>
 	</properties>
 
@@ -53,18 +60,4 @@
 
 	</dependencies>
 
-	<build>
-		<testSourceDirectory>src/test/java</testSourceDirectory>
-		<plugins>
-			<!-- Compiler plugin enforces Java compatibility and activates annotation processors -->
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.1</version>
-				<configuration>
-					<source>1.8</source>
-					<target>1.8</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
 </project>
