--- a/sourcecode/ex101solution/pom.xml
+++ b/sourcecode/ex101solution/pom.xml
@@ -66,6 +66,7 @@
 	</dependencies>
 
 	<build>
+		<defaultGoal>spring-boot:run</defaultGoal>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
