--- a/sourcecode/ex51solution/pom.xml
+++ b/sourcecode/ex51solution/pom.xml
@@ -15,6 +15,7 @@
 	
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<javase.version>1.8</javase.version>
 		<javaee.version>7.0</javaee.version>
 		<maven.compiler.source>${javase.version}</maven.compiler.source>
