--- a/sourcecode/ex51solution/pom.xml
+++ b/sourcecode/ex51solution/pom.xml
@@ -44,7 +44,7 @@
 		<dependency>
 			<groupId>org.wildfly</groupId>
 			<artifactId>wildfly-ejb-client-bom</artifactId>
-			<version>16.0.0.Final</version>
+			<version>28.0.1.Final</version>
 			<type>pom</type>
 			<scope>test</scope>
 		</dependency>
@@ -56,7 +56,7 @@
 		<dependency>
     		<groupId>org.hornetq</groupId>
     		<artifactId>hornetq-jms-client</artifactId>
-    		<version>2.4.5.Final</version>
+    		<version>2.5.0.Beta1</version>
     		<scope>test</scope>
 		</dependency>
 		
